# Automation

./: .coverage  .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  DEVELOPMENT.md  Deep thinking  Dockerfile  Makefile  PRODUCTION_READINESS.md  PRODUCTION_README.md  README.md  Software.md  deep_thinking.py  docker-compose.yml  jest.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  simulation.db  tsconfig.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-agent-tests.yml  python-agents.yml
config/: production.json
deep_thinking_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: API.md
simulation/backend/: app.py  database.py  models.py  requirements.txt  schemas.py  scoring.py  seed_data.py
simulation/frontend/: index.html  style.css
src/: __main__.py  config.py
src/agents/: api.py  super_agentic_agents.py  task_store.py
src/config/: model_config.py
src/data/: preprocessing.py
src/models/: neural_network.py
src/training/: dqn_service.py
storage/: bucket-config.yaml  index.ts
tests/: __init__.py  storage.test.ts  test_deep_thinking_cli.py  test_main_entrypoint.py  test_models.py  test_neural_network.py  test_preprocessing.py  test_simulation.py  test_super_agentic_agents.py  workflows.yaml
tests/agents/: test_super_agentic_agents.py  test_super_agentic_agents_claims.py  test_super_agentic_agents_concurrency.py  (+5 more)
workflows/: tests.yml
(+2 files in other folders)
